--- a/about-us.html
+++ b/about-us.html
@@ -35,7 +35,7 @@
     <div id="contact-info">
       <p id="contact-info-title">contact-info</p>
       <div id="contact-info-text">
-        <p>email: s28012@pjwstk.edu.pl</p>
+        <p>email: jakub.smolinski03@gmail.com</p>
         <p>phone: +48 123 456 789</p>
       </div>
   </body>
